--- a/Grid Example/index.css
+++ b/Grid Example/index.css
@@ -14,6 +14,7 @@
 
 .container{
     display: grid;
+    /* place-content: center; */
     grid-template-columns: 300px 200px 200px;
     grid-template-rows: 200px 300px 200px;
     /* grid-template-rows: 200px 300px;   */
@@ -50,4 +51,5 @@
 }
 .item8{
     background-color: var(--color-yellow);
+    width: 210px;
 }
